# neural_seq_decoder

./: .gitignore  README.md  pyproject.toml
convGRUaugment2/: args  trainingStats
notebooks/: formatCompetitionData.ipynb
scripts/: eval_competition.py  nicer_plots.py  plots.py  read_logs.py  resume_training.py  sweep.py  test.py  train_conv_gru.py  train_conv_gru_augment.py  train_conv_gru_diphone.py  train_conv_gru_light.py  train_model.py  train_model_andy.py  train_model_baseline.py  train_model_sheeram.py
src/neural_decoder/: augmentations.py  conv_gru.py  conv_gru_augment.py  conv_gru_diphone.py  conv_gru_diphone_trainer.py  conv_gru_trainer.py  dataset.py  loss.py  model.py  neural_decoder_trainer.py
src/neural_decoder/conf/: config.yaml
